<resources>
    <string name="app_name">Tourmate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nearby">Nearby</string>
    <string name="weather">Weather</string>
    <string name="settings">Settings</string>
    <string name="events">events</string>
    <string name="log_in_failed">Log In Failed"</string>
    <string name="logIn_progress">Logging In</string>
    <string name="sign_up_progress">"Registering In</string>
    <string name="facebook_application_id" translatable="false">125872198075702</string>
    <string name="title_activity_events">Events</string>
    <!--  google place api-->
    <string name="google_maps_api_key">AIzaSyDhg0IiufSFFAUIB_mdDJOkNL4t0UWUYJ4</string>
    <string name="title_activity_eventss">Eventss</string>
    <string name="title_activity_event_detail">EventDetail</string>
    <string name="spent_money">Spent Money: $5000</string>
    <string name="pos_button">Add</string>
    <string name="neg_button">Cancel</string>
    <string name="dialog_tag">Dialog Tag</string>
</resources>
